--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Install dependencies
-        run: yarn ci # 或 pnpm install / yarn install / bun install
+        run: yarn # 或 pnpm install / yarn install / bun install
       - name: Build with VitePress
         run: yarn run build # 或 pnpm build / yarn build / bun run build
       - name: Upload artifact
