--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -11,5 +11,6 @@
   "htmlWhitespaceSensitivity": "ignore",
   "vueIndentScriptAndStyle": false,
   "endOfLine": "auto",
-  "singleAttributePerLine": false
+  "singleAttributePerLine": false,
+  "ignorePatterns": ["*.md"]
 }
