--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,16 +1,16 @@
 {
-  "printWidth": 120,
-  "tabWidth": 2,
-  "useTabs": false,
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "none",
-  "bracketSpacing": true,
-  "bracketSameLine": true,
-  "arrowParens": "always",
-  "htmlWhitespaceSensitivity": "ignore",
-  "vueIndentScriptAndStyle": false,
-  "endOfLine": "auto",
-  "singleAttributePerLine": false,
-  "ignorePatterns": ["*.md"]
+  // "printWidth": 120,
+  // "tabWidth": 2,
+  // "useTabs": false,
+  // "semi": false,
+  // "singleQuote": true,
+  // "trailingComma": "none",
+  // "bracketSpacing": true,
+  // "bracketSameLine": true,
+  // "arrowParens": "always",
+  // "htmlWhitespaceSensitivity": "ignore",
+  // "vueIndentScriptAndStyle": false,
+  // "endOfLine": "auto",
+  // "singleAttributePerLine": false,
+  // "ignorePatterns": ["*.md"]
 }
