--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # 如果你的主分支是master，改为master
+      - master  # 如果你的主分支是master，改为master
 
 jobs:
   deploy:
