阿峰的博客

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - master  # 如果你的主分支是master，改为master
+      - master
 
 jobs:
   deploy:
@@ -19,10 +19,10 @@ jobs:
           node-version: 20  # 推荐使用LTS版本如18/20
 
       - name: Install dependencies
-        run: npm install  # 如果用yarn则改为yarn install
+        run: yarn install  # 如果用yarn则改为yarn install
 
       - name: Build VitePress
-        run: npm run docs:build  # 确保你的package.json中有此脚本
+        run: yarn build  # 确保你的package.json中有此脚本
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
